--- a/public/assets/css/form.css
+++ b/public/assets/css/form.css
@@ -20,7 +20,6 @@ a:hover {
   margin: 40px auto;
   border-radius: 4px;
   box-shadow: 0 4px 10px 4px rgba(19, 35, 47, 0.3);
-
 }
 
 .tab-group {
@@ -72,26 +71,8 @@ label {
   left: 13px;
   color: rgba(255, 255, 255, 0.5);
   transition: all 0.25s ease;
-  -webkit-backface-visibility: hidden;
   pointer-events: none;
   font-size: 22px;
-}
-label .req {
-  margin: 2px;
-  color: #1ab188;
-}
-
-label.active {
-  transform: translateY(50px);
-  left: 2px;
-  font-size: 14px;
-}
-label.active .req {
-  opacity: 0;
-}
-
-label.highlight {
-  color: #ffffff;
 }
 
 input,
@@ -99,10 +80,8 @@ textarea {
   font-size: 22px;
   display: block;
   width: 100%;
-  height: 100%;
   padding: 5px 10px;
   background: none;
-  background-image: none;
   border: 1px solid #a0b3b0;
   color: #ffffff;
   border-radius: 0;
@@ -151,7 +130,6 @@ textarea {
   background: #1ab188;
   color: #ffffff;
   transition: all 0.5s ease;
-  -webkit-appearance: none;
 }
 .button:hover,
 .button:focus {
@@ -168,3 +146,7 @@ textarea {
   text-align: right;
 }
 
+/* Classe pour masquer les labels lorsqu'un champ est rempli */
+label.hide {
+  display: none;
+}
