--- a/src/View/Admin/Orderitem/_form.html.twig
+++ b/src/View/Admin/Orderitem/_form.html.twig
@@ -80,7 +80,7 @@
 						</div>
 						<div class="form-group">
 							<label for="price">Prix:</label>
-							<input type="text" class="form-control" id="price" name="price" value="{{item.price}}">
+							<input type="text" class="form-control" id="price" name="price" value="{{order.price}}">
 						</div>
 						<div class="form-group">
 							<label for="quantity">Quantité:</label>
