--- a/src/View/Admin/Orderitem/show.html.twig
+++ b/src/View/Admin/Orderitem/show.html.twig
@@ -4,8 +4,8 @@
     <h1>La commande de M/Mme {{ order.0.username }} à {{ order.0.total_amount|intToCurrency }}</h1>
     {% for ord in order %}
     <p>{{ ord.name }} - {{ ord.quantity }} exemplaires - {{ ord.price|intToCurrency }} unité</p>
+    <a href="/admin/orderitem/edit?id={{ ord.ordered_id }}">Edit</a>
     {% endfor %}
-    <a href="/admin/orderitem/edit?id={{ order.0.id }}">Edit</a>
     <br>
     <a href="/admin/orderitem">Back</a>
 {% endblock %}
