Création et gestion de compte user

--- a/src/View/header.html.twig
+++ b/src/View/header.html.twig
@@ -40,8 +40,8 @@
                                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="compte" role="button" aria-haspopup="true" aria-expanded="false"><i class="bi bi-person-fill"></i> Compte</a>
                                 <div class="dropdown-menu">
                                     <a class="dropdown-item" href="/login">Login</a>
-                                    <a class="dropdown-item" href="/logout">Se Deconnecter</a>
-                                    <a class="dropdown-item" href="/compte">Mon compte</a>
+                                    <a class="dropdown-item" href="/logout">Se Déconnecter</a>
+                                    <a class="dropdown-item" href="/account">Mon compte</a>
                                     <a class="dropdown-item" href="/admin">Administration</a>
                                 </div>
                             </li>
