--- a/src/View/Admin/Orderitem/index.html.twig
+++ b/src/View/Admin/Orderitem/index.html.twig
@@ -8,12 +8,11 @@
 
 <h1>Les commandes</h1>
 {% for ord in orders %}
-    <div class="main">
         <a href="/admin/orderitem/show?id={{ ord.id }}" class="ordera">
-            {{ ord.username }} - Prix total : {{ ord.total_amount|intToCurrency }} - Date de
-                commande : {{ ord.created_at | date("d/m/Y g:i:sA") }}
+            <p class="fly">{{ ord.username }}</p>
+            <p class="bottom">Prix total : {{ ord.total_amount|intToCurrency }} - Date de
+                commande : {{ ord.created_at | date("d/m/Y g:i:sA") }}</p>
         </a>
-    </div>
 {% endfor %}
 
 {% endblock %}
