--- a/src/View/Admin/Orderitem/show.html.twig
+++ b/src/View/Admin/Orderitem/show.html.twig
@@ -6,18 +6,17 @@
 
 {% block content %}
 {% if order.0.total_amount == totalAmount %}
-    <h1>La commande de M/Mme {{ order.0.username }} à {{ order.0.total_amount|intToCurrency }}</h1>
+    <h1>La commande de M/Mme <b>{{ order.0.username }}</b> à <b>{{ order.0.total_amount|intToCurrency }}</b></h1>
 {% else %}
-    <h1>La commande de M/Mme {{ order.0.username }} est maintenant à {{ totalAmount|intToCurrency }}</h1>
-    <h2>(anciennement {{ order.0.total_amount|intToCurrency }})</h2>
+    <h1>La commande de M/Mme <b>{{ order.0.username }}</b> est maintenant à <b>{{ totalAmount|intToCurrency }}</b></h1>
+    <h2>(anciennement <b>{{ order.0.total_amount|intToCurrency }}</b>)</h2>
 {% endif %}
 
 
 
 {% for ord in order %}
 <div class="main">
-    
-    <a href="/admin/orderitem/edit?id={{ ord.ordered_id }}" class="ordera">{{ ord.name }} - {{ ord.quantity }} exemplaires - {{ ord.price|intToCurrency }} unité</a>
+    <a href="/admin/orderitem/edit?id={{ ord.ordered_id }}" class="ordera"><b>{{ ord.name }}</b> - <b>{{ ord.quantity }}</b> exemplaires - <b>{{ ord.price|intToCurrency }}</b> unité</a>
 </div>
 {% endfor %}
 
