--- a/src/View/Admin/Orderitem/index.html.twig
+++ b/src/View/Admin/Orderitem/index.html.twig
@@ -10,8 +10,8 @@
 {% for ord in orders %}
         <a href="/admin/orderitem/show?id={{ ord.id }}" class="ordera">
             <p class="fly">{{ ord.username }}</p>
-            <p class="bottom">Prix total : {{ ord.total_amount|intToCurrency }} - Date de
-                commande : {{ ord.created_at | date("d/m/Y g:i:sA") }}</p>
+            <p class="bottom">Prix total : <b>{{ ord.total_amount|intToCurrency }}</b> - Date de
+                commande : <b>{{ ord.created_at | date("d/m/Y g:i:sA") }}</b></p>
         </a>
 {% endfor %}
 
