base section html home page

--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -1,6 +1,302 @@
 {% extends 'layout.html.twig' %}
 
+
+{% block stylesheet %}
+<link rel="stylesheet" href="/assets/css/home.css">
+{% endblock %}
+
 {% block content %}
-    <h1>Hello Wilder !</h1>
-    <p>Find a complete CRUD example on <a href="/items">/items</a> page.</p>
+
+
+<div class='heroEffects'>
+    <div class="bg">  
+        <div class="arrow bouncy">  
+            <svg height="25" width="50">
+                <polygon points="0,0 25,10 50,0 25,25" fill="rgba(255,255,255,.5)" stroke-width="0" stroke="rgba(255,255,255,.3)"/>
+            </svg>
+        </div>  
+        <div class="title centerV"> 
+            <div>
+                <div class="text"> 
+                    <h1>CuirCuir Moustache <img width="200px" src="/assets/images/moustache.svg" style="position: absolute; top:20%; right: 30%; rotate: 35deg; z-index: -1;"></h1>
+                    <h3>Sublimer le cuir</h3>
+                    
+                </div>
+            </div>
+        </div> 
+    </div> 
+    <div class="shade"></div>
+</div>
+
+
+<!-- For scrolling -->
+<section class="col-12 bg-white d-none d-md-flex justify-content-center  " style="height: 100px; ">
+
+    <div class="pt-4 text-center" style="width: 150px;">
+        <a href="#" class="text-black text-decoration-none">
+            <i class="bi bi-crop "></i><br>
+            <span class="">Categorie XX</span>
+        </a>
+    </div>
+    <div class="pt-4 text-center" style="width: 150px;">
+        <a href="#" class="text-black text-decoration-none">
+            <i class="bi bi-crop "></i><br>
+            <span class="">Categorie XX</span>
+        </a>
+    </div>
+    <div class="pt-4 text-center" style="width: 150px;">
+        <a href="#" class="text-black text-decoration-none">
+            <i class="bi bi-crop "></i><br>
+            <span class="">Categorie XX</span>
+        </a>
+    </div>
+    <div class="pt-4 text-center" style="width: 150px;">
+        <a href="#" class="text-black text-decoration-none">
+            <i class="bi bi-crop "></i><br>
+            <span class="">Categorie XX</span>
+        </a>
+    </div>
+    <div class="pt-4 text-center" style="width: 150px;">
+        <a href="#" class="text-black text-decoration-none">
+            <i class="bi bi-crop "></i><br>
+            <span class="">Categorie XX</span>
+        </a>
+    </div>
+    <div class="pt-4 text-center" style="width: 150px;">
+        <a href="#" class="text-black text-decoration-none">
+            <i class="bi bi-crop "></i><br>
+            <span class="">Categorie XX</span>
+        </a>
+    </div>
+
+</section>
+<div class='content'>
+
+<h1 class="mb-4 title-section">Nos produits</h1>
+<section class="w-100 rounded bg-white d-flex justify-content-center flex-wrap mb-4 pb-4">
+
+    <div class="d-flex justify-content-center container mt-5 bg-transparent" style="width: 300px;">
+        <div class="card bg-transparent p-3 ">
+            <div class="about-product text-center mt-2"><img src="/assets/images/test.png" width="100%">
+                <div>
+                    <h4>Ceinture en cuir</h4>
+                    <h6 class="mt-0 text-black-50">Cuir de vache teint noir</h6>
+                </div>
+            </div>
+            <div class="stats mt-2">
+                <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, accusamus!</span>
+               
+            </div>
+            <div class="d-flex justify-content-between total font-weight-bold mt-4"><span>35.99€</span><span><a href="#"><i class="bi bi-cart-plus text-dark"></i></a></span></div>
+        </div>
+    </div>
+
+    <div class="d-flex justify-content-center container mt-5 bg-transparent" style="width: 300px;">
+        <div class="card bg-transparent p-3 ">
+            <div class="about-product text-center mt-2"><img src="/assets/images/test.png" width="100%">
+                <div>
+                    <h4>Ceinture en cuir</h4>
+                    <h6 class="mt-0 text-black-50">Cuir de vache teint noir</h6>
+                </div>
+            </div>
+            <div class="stats mt-2">
+                <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, accusamus!</span>
+               
+            </div>
+            <div class="d-flex justify-content-between total font-weight-bold mt-4"><span>35.99€</span><span><a href="#"><i class="bi bi-cart-plus text-dark"></i></a></span></div>
+        </div>
+    </div>
+
+    <div class="d-flex justify-content-center container mt-5 bg-transparent" style="width: 300px;">
+        <div class="card bg-transparent p-3 ">
+            <div class="about-product text-center mt-2"><img src="/assets/images/test.png" width="100%">
+                <div>
+                    <h4>Ceinture en cuir</h4>
+                    <h6 class="mt-0 text-black-50">Cuir de vache teint noir</h6>
+                </div>
+            </div>
+            <div class="stats mt-2">
+                <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, accusamus!</span>
+               
+            </div>
+            <div class="d-flex justify-content-between total font-weight-bold mt-4"><span>35.99€</span><span><a href="#"><i class="bi bi-cart-plus text-dark"></i></a></span></div>
+        </div>
+    </div>
+
+    <div class="d-flex justify-content-center container mt-5 bg-transparent" style="width: 300px;">
+        <div class="card bg-transparent p-3 ">
+            <div class="about-product text-center mt-2"><img src="/assets/images/test.png" width="100%">
+                <div>
+                    <h4>Ceinture en cuir</h4>
+                    <h6 class="mt-0 text-black-50">Cuir de vache teint noir</h6>
+                </div>
+            </div>
+            <div class="stats mt-2">
+                <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, accusamus!</span>
+               
+            </div>
+            <div class="d-flex justify-content-between total font-weight-bold mt-4"><span>35.99€</span><span><a href="#"><i class="bi bi-cart-plus text-dark"></i></a></span></div>
+        </div>
+    </div>
+
+    <div class="d-flex justify-content-center container mt-5 bg-transparent" style="width: 300px;">
+        <div class="card bg-transparent p-3 ">
+            <div class="about-product text-center mt-2"><img src="/assets/images/test.png" width="100%">
+                <div>
+                    <h4>Ceinture en cuir</h4>
+                    <h6 class="mt-0 text-black-50">Cuir de vache teint noir</h6>
+                </div>
+            </div>
+            <div class="stats mt-2">
+                <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, accusamus!</span>
+               
+            </div>
+            <div class="d-flex justify-content-between total font-weight-bold mt-4"><span>35.99€</span><span><a href="#"><i class="bi bi-cart-plus text-dark"></i></a></span></div>
+        </div>
+    </div>
+
+    <div class="d-flex justify-content-center container mt-5 bg-transparent" style="width: 300px;">
+        <div class="card bg-transparent p-3 ">
+            <div class="about-product text-center mt-2"><img src="/assets/images/test.png" width="100%">
+                <div>
+                    <h4>Ceinture en cuir</h4>
+                    <h6 class="mt-0 text-black-50">Cuir de vache teint noir</h6>
+                </div>
+            </div>
+            <div class="stats mt-2">
+                <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, accusamus!</span>
+               
+            </div>
+            <div class="d-flex justify-content-between total font-weight-bold mt-4"><span>35.99€</span><span><a href="#"><i class="bi bi-cart-plus text-dark"></i></a></span></div>
+        </div>
+    </div>
+
+    <div class="d-flex justify-content-center container mt-5 bg-transparent" style="width: 300px;">
+        <div class="card bg-transparent p-3 ">
+            <div class="about-product text-center mt-2"><img src="/assets/images/test.png" width="100%">
+                <div>
+                    <h4>Ceinture en cuir</h4>
+                    <h6 class="mt-0 text-black-50">Cuir de vache teint noir</h6>
+                </div>
+            </div>
+            <div class="stats mt-2">
+                <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, accusamus!</span>
+               
+            </div>
+            <div class="d-flex justify-content-between total font-weight-bold mt-4"><span>35.99€</span><span><a href="#"><i class="bi bi-cart-plus text-dark"></i></a></span></div>
+        </div>
+    </div>
+
+    <div class="d-flex justify-content-center container mt-5 bg-transparent" style="width: 300px;">
+        <div class="card bg-transparent p-3 ">
+            <div class="about-product text-center mt-2"><img src="/assets/images/test.png" width="100%">
+                <div>
+                    <h4>Ceinture en cuir</h4>
+                    <h6 class="mt-0 text-black-50">Cuir de vache teint noir</h6>
+                </div>
+            </div>
+            <div class="stats mt-2">
+                <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, accusamus!</span>
+               
+            </div>
+            <div class="d-flex justify-content-between total font-weight-bold mt-4"><span>35.99€</span><span><a href="#"><i class="bi bi-cart-plus text-dark"></i></a></span></div>
+        </div>
+    </div>
+
+    <div class="d-flex justify-content-center container mt-5 bg-transparent" style="width: 300px;">
+        <div class="card bg-transparent p-3 ">
+            <div class="about-product text-center mt-2"><img src="/assets/images/test.png" width="100%">
+                <div>
+                    <h4>Ceinture en cuir</h4>
+                    <h6 class="mt-0 text-black-50">Cuir de vache teint noir</h6>
+                </div>
+            </div>
+            <div class="stats mt-2">
+                <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, accusamus!</span>
+               
+            </div>
+            <div class="d-flex justify-content-between total font-weight-bold mt-4"><span>35.99€</span><span><a href="#"><i class="bi bi-cart-plus text-dark"></i></a></span></div>
+        </div>
+    </div>
+</section>
+
+
+
+
+
+    <div class="card mb-3 " >
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="/assets/images/men.jpg" class="img-fluid rounded-start" alt="men">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body bg-transparent">
+                <p class="card-text fs-4">Découvrez nos Nouveautés Exclusives !</p>
+              <p class="card-text fs-6">Nous sommes ravis de vous présenter les derniers ajouts à notre collection ! Ces produits ont été soigneusement sélectionnés pour répondre à vos besoins et embellir vos travaux. Explorez dès maintenant notre sélection et laissez-vous séduire par nos nouveautés.</p>
+              <div class="d-flex flex-row justify-content-center flex-wrap " >
+
+
+                
+                <div class="d-flex justify-content-center container mt-5 bg-transparent" style="width: 300px;">
+                    <div class="card bg-transparent p-3 ">
+                        <div class="about-product text-center mt-2"><img src="/assets/images/test.png" width="100%">
+                            <div>
+                                <h4>Ceinture en cuir</h4>
+                                <h6 class="mt-0 text-black-50">Cuir de vache teint noir</h6>
+                            </div>
+                        </div>
+                        <div class="stats mt-2">
+                            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, accusamus!</span>
+                           
+                        </div>
+                        <div class="d-flex justify-content-between total font-weight-bold mt-4"><span>35.99€</span><span><a href="#"><i class="bi bi-cart-plus text-dark"></i></a></span></div>
+                    </div>
+                </div>
+
+                <div class="d-flex justify-content-center container mt-5 bg-transparent" style="width: 300px;">
+                    <div class="card bg-transparent p-3 ">
+                        <div class="about-product text-center mt-2"><img src="/assets/images/test.png" width="100%">
+                            <div>
+                                <h4>Ceinture en cuir</h4>
+                                <h6 class="mt-0 text-black-50">Cuir de vache teint noir</h6>
+                            </div>
+                        </div>
+                        <div class="stats mt-2">
+                            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, accusamus!</span>
+                           
+                        </div>
+                        <div class="d-flex justify-content-between total font-weight-bold mt-4"><span>35.99€</span><span><a href="#"><i class="bi bi-cart-plus text-dark"></i></a></span></div>
+                    </div>
+                </div>
+
+
+                <div class="d-flex justify-content-center container mt-5 bg-transparent" style="width: 300px;">
+                    <div class="card bg-transparent p-3 ">
+                        <div class="about-product text-center mt-2"><img src="/assets/images/test.png" width="100%">
+                            <div>
+                                <h4>Ceinture en cuir</h4>
+                                <h6 class="mt-0 text-black-50">Cuir de vache teint noir</h6>
+                            </div>
+                        </div>
+                        <div class="stats mt-2">
+                            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, accusamus!</span>
+                           
+                        </div>
+                        <div class="d-flex justify-content-between total font-weight-bold mt-4"><span>35.99€</span><span><a href="#"><i class="bi bi-cart-plus text-dark"></i></a></span></div>
+                    </div>
+                </div>
+
+
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+</div>
+
+
+
 {% endblock %}
