--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&subset=devanagari,latin-ext');
 
+@import url('https://fonts.googleapis.com/css2?family=Yellowtail&display=swap');
+
 :root {
     --text-color-light: rgb(253, 253, 253);
     --text-color-black: rgb(22, 22, 22);
@@ -256,8 +258,6 @@ p {
     padding-top: 10px;
     opacity: 1;
     transform: translate(0);
-    transition: all 300ms linear;
-    transition-delay: 1700ms;
 }
 
 body.hero-anime p {
@@ -570,8 +570,6 @@ body.dark .navbar-light .navbar-toggler-icon:before {
 body.dark .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
     border-color: transparent;
 }
-
-
 
 /* #Media
 ================================================== */
