--- a/src/View/Admin/Orderitem/_form.html.twig
+++ b/src/View/Admin/Orderitem/_form.html.twig
@@ -32,6 +32,7 @@
 							<label for="quantity">Quantité:</label>
 							<input type="text" class="form-control" id="quantity" name="quantity" value="{{ order.quantity }}">
 						</div>
+						<h4>N'oubliez pas de modifier le stock associé</h4>
 						<div class="form-group">
 							<label for="price">Prix:</label>
 							<input type="text" class="form-control" id="price" name="price" value="{{ order.price }}">
