--- a/src/View/header.html.twig
+++ b/src/View/header.html.twig
@@ -37,12 +37,20 @@
                                 <a class="nav-link" href="/cart"><i class="bi bi-basket2"></i> panier</a>
                             </li>
                             <li class="nav-item ps-4 ps-md-0 ms-0 ms-md-4">
-                                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="compte" role="button" aria-haspopup="true" aria-expanded="false"><i class="bi bi-person-fill"></i> Compte</a>
+                                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="compte" role="button" aria-haspopup="true" aria-expanded="false">
+                                    <i class="bi bi-person-fill"></i> Compte
+                                </a>
                                 <div class="dropdown-menu">
-                                    <a class="dropdown-item" href="/login">Login</a>
-                                    <a class="dropdown-item" href="/logout">Se Déconnecter</a>
-                                    <a class="dropdown-item" href="/account">Mon compte</a>
-                                    <a class="dropdown-item" href="/admin">Administration</a>
+                                    {% if not isLoggedIn %}
+                                        <!-- Liens visibles lorsque l'utilisateur n'est pas connecté -->
+                                        <a class="dropdown-item" href="/login">Login</a>
+                                        <a class="dropdown-item" href="/admin">Administration</a>
+                                    {% else %}
+                                        <!-- Liens visibles lorsque l'utilisateur est connecté -->
+                                        <a class="dropdown-item" href="/account">Mon compte</a>
+                                        <a class="dropdown-item" href="/admin">Administration</a>
+                                        <a class="dropdown-item" href="/logout">Se Déconnecter</a>
+                                    {% endif %}
                                 </div>
                             </li>
                         </ul>
@@ -53,9 +61,4 @@
         </div>
     </div>
 </div>
-
-
-
-
-
 {% endblock %}
