--- a/public/assets/css/product/product.css
+++ b/public/assets/css/product/product.css
@@ -13,10 +13,18 @@ li {
     grid-column-gap: 0px;
     grid-row-gap: 0px;
     margin: 40px;
+    gap: 2%;
 }
 
 .div1 { 
     grid-area: 1 / 1 / 2 / 2;
+}
+
+.product-image {
+    text-align: left;
+    background-color: white;
+    padding: 5%;
+    border-radius: 5px;
 }
 
 .div2 { 
@@ -25,10 +33,34 @@ li {
     background-color: white;
     padding: 5%;
     border-radius: 5px;
+    height: 360px;
+}
+
+.long-description {
+    text-align: left;
+    background-color: white;
+    padding: 5%;
+    border-radius: 5px;
+    margin-top: 20px;
+}
+
+.review {
+    background-color: white;
+    padding: 5%;
+    border-radius: 5px;
+    margin-top: 20px;
 }
 
 .description {
     text-align: left;
+    margin-top: -15px;
+    margin-bottom: 15px;
+}
+
+.date {
+    text-align: left;
+    margin-top: -20px;
+    margin-bottom: 15px;
 }
 
 .form-css {
@@ -41,6 +73,7 @@ li {
     border-radius: 5px;
     height: 40px;
     border: solid 2px var(--tertiary-color);
+    text-align: center;
 }
 
 .inp-numb:hover {
@@ -67,10 +100,102 @@ li {
 .conditions {
     width: 100%;
     display: flex;
-    font-size: 14px;
+    font-size: 12px;
     justify-content: space-between;
     border-top: 2px solid rgba(0, 0, 0, .1);
     padding-bottom: 8px;
     border-bottom: 2px solid rgba(0, 0, 0, .1);
     gap: 5px;
+}
+
+.more-infos {
+    display: flex;
+    font-size: 12px;
+    background-color: white;
+    justify-content: space-evenly;
+    padding: 20px;
+    flex-wrap: wrap;
+}
+
+.center {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.return {
+    position: fixed;
+    top: 90%;
+    left: 2%;
+    text-decoration: none;
+    border: solid 1px var(--main-color);
+    border-radius: 5px;
+}
+
+.return:hover {
+    border: none;
+}
+
+.back {
+    display: flex;
+    height: 3em;
+    width: 100px;
+    align-items: center;
+    justify-content: center;
+    background-color: #eeeeee4b;
+    border-radius: 3px;
+    letter-spacing: 1px;
+    transition: all 0.2s linear;
+    cursor: pointer;
+    border: none;
+    background: #fff;
+   }
+   
+   button > svg {
+    margin-right: 5px;
+    margin-left: 5px;
+    font-size: 20px;
+    transition: all 0.4s ease-in;
+   }
+   
+   button:hover > svg {
+    font-size: 1.2em;
+    transform: translateX(-5px);
+   }
+   
+   button:hover {
+    box-shadow: 9px 9px 33px #d1d1d1, -9px -9px 33px #ffffff;
+    transform: translateY(-2px);
+   }
+
+@media (max-width: 809px) {
+    .parent-div {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(2, 1fr);
+        grid-column-gap: 0px;
+        grid-row-gap: 0px;
+        gap: 1%;
+    }
+
+    .div1 { 
+        grid-area: 1 / 1 / 2 / 2;
+        /* width: 50% */
+    }
+
+    .div2 { 
+        grid-area: 2 / 1 / 3 / 2;
+        height: 350px;
+        /* width: 50%; */
+    }
+
+    .description {
+        display: none;
+    }
+
+    .div5 {
+        margin: -5.5%;
+        margin-top: clamp(80px, 3vh, 600px);
+    }
 }
