--- a/public/assets/css/product/product.css
+++ b/public/assets/css/product/product.css
@@ -7,17 +7,13 @@ li {
 }
 
 .parent-div {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 1fr;
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
-    margin: 40px;
-    gap: 2%;
+    margin: 40px; 
+    display: flex;
+    justify-content: space-evenly;
 }
 
 .div1 { 
-    grid-area: 1 / 1 / 2 / 2;
+    width: 45%;
 }
 
 .product-image {
@@ -28,12 +24,14 @@ li {
 }
 
 .div2 { 
-    grid-area: 1 / 2 / 2 / 3;
     text-align: left;
     background-color: white;
-    padding: 5%;
+    padding: 2%;
     border-radius: 5px;
-    height: 360px;
+    height: 400px;
+    width: 45%;
+    display: flex;
+    flex-direction: column;
 }
 
 .long-description {
@@ -171,31 +169,22 @@ li {
 
 @media (max-width: 809px) {
     .parent-div {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(2, 1fr);
-        grid-column-gap: 0px;
-        grid-row-gap: 0px;
-        gap: 1%;
+        flex-direction: column;
     }
 
     .div1 { 
-        grid-area: 1 / 1 / 2 / 2;
-        /* width: 50% */
+        width: 100%;
+
     }
 
     .div2 { 
-        grid-area: 2 / 1 / 3 / 2;
         height: 350px;
-        /* width: 50%; */
+        width: 100%;
+        padding: 5%;
+        margin-top: 20px;
     }
 
     .description {
         display: none;
-    }
-
-    .div5 {
-        margin: -5.5%;
-        margin-top: clamp(80px, 3vh, 600px);
     }
 }
