correctif css sur le cart

--- a/public/assets/css/cart/cart.css
+++ b/public/assets/css/cart/cart.css
@@ -48,14 +48,20 @@ h1 {
     align-items: center;
 }
 
-button {
+.c-button {
     color: var(--sixnary-color);
-    background-color: var(--quaternary-color);
+    background-color: var(--tertiary-color);
     border: none;
     border-radius: 5px;
     min-width: 60%;
     min-height: 40px;
     cursor: pointer;
+}
+
+.c-button:hover {
+  background-color: white;
+  color: var(--tertiary-color);
+  border: solid 2px var(--tertiary-color);
 }
 
 .cart-button {
@@ -182,7 +188,7 @@ li {
   .card-subtitle {
     font-size: 14px;
     font-weight: 400;
-    min-height: 90px;
+    min-height: 80px;
     color: var(--font-color-sub);
   }
   
@@ -214,11 +220,11 @@ li {
   .card-btn {
     height: 35px;
     background: var(--bg-color);
-    border: 2px solid var(--main-color);
+    border: 2px solid var(--tertiary-color);
     border-radius: 5px;
     padding: 0 15px;
     transition: all 0.3s;
-    color: black;
+    color: var(--tertiary-color);
   }
   
   .card-btn svg {
@@ -233,7 +239,8 @@ li {
   }
   
   .card-btn:hover {
-    border: 2px solid var(--main-focus);
+    color: white;
+    background-color: var(--tertiary-color);
   }
   
   .card-btn:hover svg {
