--- a/src/View/Product/show.html.twig
+++ b/src/View/Product/show.html.twig
@@ -31,13 +31,7 @@
             natus, architecto assumenda iusto, ullam eius dicta nostrum dolor. Tenetur similique iusto hic.
         </div>
         <div class="div3" id="div3">
-            <p class="long-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis sit qui,
-                amet,
-                nisi temporibus at, ipsa facere iusto soluta corporis explicabo neque dolorem magnam cumque maiores
-                natus
-                officiis debitis harum? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad cum amet minus ab
-                molestias maxime repudiandae tempore quis? Optio laborum corrupti alias tempore natus obcaecati iure
-                consequatur mollitia rem atque!</p>
+            <p class="long-description">{{ product.descriptionDetail }}</p>
         </div>
         <div class="review div4" id="div4">Avis clients
             <p>Aucun avis pour le moment</p>
