--- a/src/View/Admin/Categorie/index.html.twig
+++ b/src/View/Admin/Categorie/index.html.twig
@@ -78,6 +78,7 @@
                             <th scope="col">Nom</th>
                             <th scope="col">Description</th>
                             <th scope="col">Parent</th>
+                            <th scope="col">Image</th>
                             <th scope="col">Action</th>
                           </tr>
                         </thead>
@@ -89,6 +90,7 @@
                                 <td>{{ item.name }}</td>
                                 <td>{{ item.description[:10] }}...</td>
                                 <td>{{ item.parent_id }}</td>
+                                <td>{{ item.image[:10] }}</td>
                                 <td class="table_action">
                                     <a href="/admin/categorie/show?id={{ item.id }}"><i class="bi bi-eye"></i></a>
                                     <a href="/admin/categorie/delete?id={{ item.id }}"><i class="bi bi-x-square"></i></a>
