--- a/src/View/Admin/Product/index.html.twig
+++ b/src/View/Admin/Product/index.html.twig
@@ -80,6 +80,7 @@
                             <th scope="col">Prix</th>
                             <th scope="col">Categorie</th>
                             <th scope="col">Stock</th>
+                            <th scope="col">Image</th>
                             <th scope="col">Action</th>
                           </tr>
                         </thead>
@@ -92,6 +93,7 @@
                                 <td>{{ item.price|intToCurrency }}</td>
                                 <td>{{ item.category_name }}</td>
                                 <td>{{ item.quantity }}</td>
+                                <td>{{ item.image[:15] }}</td>
                                 <td class="table_action">
                                     <a href="/admin/product/show?id={{ item.id }}"><i class="bi bi-eye"></i></a>
                                     <a href="/admin/product/delete?id={{ item.id }}"><i class="bi bi-x-square"></i></a>
